--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -443,6 +443,12 @@ data:
     metadata:
       name: {{ .Values.name }}
       namespace: {{ .Release.Namespace }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
     spec:
       apiUrl: {{ required "ApiUrl needs to be set!" .Values.apiUrl }}
 
@@ -468,9 +474,9 @@ data:
       networkZone: {{ .Values.networkZone }}
       {{- end }}
 
-      {{- if .Values.activegate.image }}
-      activegate:
-        image: {{ .Values.activegate.image }}
+      {{- if .Values.activeGate.image }}
+      activeGate:
+        image: {{ .Values.activeGate.image }}
       {{- end }}
 
       {{- if .Values.kubernetesMonitoring.enabled }}
