--- a/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,7 +50,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            {{ if or (eq .Values.platform "openshift") (eq .Values.platform "openshift-3-11") }}
+            {{ if eq .Values.platform "openshift"}}
             - name: RELATED_IMAGE_DYNATRACE_ONEAGENT
               value: registry.connect.redhat.com/dynatrace/oneagent
             {{ end }}
@@ -84,18 +84,6 @@ spec:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
-            {{ if eq .Values.platform "openshift-3-11" }}
-              - matchExpressions:
-                  - key: beta.kubernetes.io/arch
-                    operator: In
-                    values:
-                      - amd64
-                      - arm64
-                  - key: beta.kubernetes.io/os
-                    operator: In
-                    values:
-                      - linux
-            {{ else }}
               - matchExpressions:
                   - key: kubernetes.io/arch
                     operator: In
@@ -106,7 +94,6 @@ spec:
                     operator: In
                     values:
                       - linux
-            {{ end }}
       serviceAccountName: {{ .Release.Name }}
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
