--- a/dynatrace-operator/chart/default/templates/Common/operator/clusterrole-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/clusterrole-operator.yaml
@@ -48,6 +48,7 @@ rules:
       - secrets
     resourceNames:
       - dynatrace-dynakube-config
+      - dynatrace-data-ingest-endpoint
     verbs:
       - get
       - update
@@ -59,22 +60,6 @@ rules:
     verbs:
       - create
       - patch
-  - apiGroups:
-      - admissionregistration.k8s.io
-    resources:
-      - mutatingwebhookconfigurations
-    verbs:
-      - list
-      - create
-      - watch
-  - apiGroups:
-      - admissionregistration.k8s.io
-    resources:
-      - validatingwebhookconfigurations
-    verbs:
-      - list
-      - create
-      - watch
   - apiGroups:
       - admissionregistration.k8s.io
     resources:
@@ -98,14 +83,7 @@ rules:
     resources:
       - customresourcedefinitions
     resourceNames:
-      - "dynakubes.dynatrace.com"
+      - dynakubes.dynatrace.com
     verbs:
       - get
       - update
-  - apiGroups:
-    - apiextensions.k8s.io
-    resources:
-      - customresourcedefinitions
-    verbs:
-      - list
-      - watch
