--- a/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/operator/deployment-operator.yaml
@@ -61,11 +61,11 @@ spec:
               name: server-port
           resources:
             requests:
-              cpu: {{ .Values.operator.cpu.requests }}
-              memory: {{ .Values.operator.memory.requests }}
+              cpu: {{ .Values.operator.requests.cpu }}
+              memory: {{ .Values.operator.requests.memory }}
             limits:
-              cpu: {{ .Values.operator.cpu.limits }}
-              memory: {{ .Values.operator.memory.limits }}
+              cpu: {{ .Values.operator.limits.cpu }}
+              memory: {{ .Values.operator.limits.memory }}
           readinessProbe:
             httpGet:
               path: /healthz
