--- a/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
@@ -80,11 +80,11 @@ spec:
               containerPort: 8443
           resources:
             requests:
-              cpu: {{ .Values.webhook.cpu.requests }}
-              memory: {{ .Values.webhook.memory.requests }}
+              cpu: {{ .Values.webhook.requests.cpu }}
+              memory: {{ .Values.webhook.requests.memory }}
             limits:
-              cpu: {{ .Values.webhook.cpu.limits }}
-              memory: {{ .Values.webhook.memory.limits }}
+              cpu: {{ .Values.webhook.limits.cpu }}
+              memory: {{ .Values.webhook.limits.memory }}
       serviceAccountName: dynatrace-webhook
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
