--- a/dynatrace-operator/chart/default/values.yaml
+++ b/dynatrace-operator/chart/default/values.yaml
@@ -38,20 +38,20 @@ operator:
   customPullSecret: ""
   nodeSelector: {}
   tolerations: []
-  memory:
-    requests: 128Mi
-    limits: 64Mi
-  cpu:
-    requests: 50m
-    limits: 128Mi
+  requests:
+    cpu: 50m
+    memory: 64Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
 
 webhook:
-  memory:
-    requests: 128Mi
-    limits: 128Mi
-  cpu:
-    requests: 300m
-    limits: 300m
+  requests:
+    cpu: 300m
+    memory: 128Mi
+  limits:
+    cpu: 300m
+    memory: 128Mi
 
 createSecurityContextConstraints: true # Only applicable for Openshift
 
